--- a/index.ipynb
+++ b/index.ipynb
@@ -104,6 +104,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,6 +159,24 @@
     "From escape mode, we change a cell to type code by pressing the letter `y`.\n",
     "\n",
     "Anytime we create a new cell, say with the shortcut key `b`, the new cell will default to code mode.  We can switch to escape mode and press the letter `m` to change the cell from code to markdown."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### View All Shortcuts\n",
+    "\n",
+    "Press the key `h` while in escape mode to view the menu for all of Jupyter's shortcuts."
    ]
   },
   {
